--- a/Ang2Demo/Views/Home/Index.cshtml
+++ b/Ang2Demo/Views/Home/Index.cshtml
@@ -2,4 +2,19 @@
 @{
     ViewBag.Title = "Home Page";
 }
+
+<link rel="stylesheet" href="styles.css">
+<!-- Polyfill(s) for older browsers -->
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
+<script src="node_modules/core-js/client/shim.min.js"></script>
+<script src="node_modules/zone.js/dist/zone.js"></script>
+<script src="node_modules/reflect-metadata/Reflect.js"></script>
+<script src="node_modules/systemjs/dist/system.src.js"></script>
+<script src="systemjs.config.js"></script>
+<script>
+      System.import('app').catch(function(err){ console.error(err); });
+</script>
+<!-- Angular2 Code -->
+
+
  <my-app>Loading...</my-app>
