--- a/Ang2Demo/Views/Home/Index.cshtml
+++ b/Ang2Demo/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
     ViewBag.Title = "Home Page";
+    Layout = null;
 }
 
+<base href="/" />
 <link rel="stylesheet" href="styles.css">
 <!-- Polyfill(s) for older browsers -->
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
